# MedicalRag

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-research.txt  requirements.txt
apps/: __init__.py
backend/: README.md  requirements.txt
configs/: e0.yaml  e1.yaml  e2.yaml  experiments.yaml  pipelines.yaml  protocol.yaml
data/: eda_report.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  ATTRIBUTION.md  BIAS_AND_LEAKAGE_CONTROLS.md  ERROR_TAXONOMY.md  EXPERIMENT_RUNBOOK.md  HUMAN_EVALUATION.md  KE_HOACH_NGHIEN_CUU_MedicalGraphRAG.html  KE_HOACH_THUC_NGHIEM_MEDICAL_RAG.html  KIEN_TRUC_HE_THONG_PIPELINE_WORKFLOW.html  REPOSITORY_STRUCTURE.md  RESULTS.md  THIET_KE_MedicalGraphRAG.html  THIET_KE_Pipeline_MedicalGraphRAG.html  TONG_QUAN_TUNG_BUOC_MedicalGraphRAG.html
frontend/: index.html  package-lock.json  package.json
medrag_lab/: __init__.py  __main__.py  cli.py  pipeline.py  schemas.py  settings.py
reports/: BAO_CAO_KET_QUA_CUOI.html  EDA.html  FINAL_REPORT.html  eda.json  error_audit.json  final_statistics.json  heldout_access.json  judge_sanity.json
results/: analysis.json  gemini-2-5-flash-lite_E0.jsonl  gpt-4-1-nano_E0.jsonl  gpt-4-1-nano_E1.jsonl
scripts/: analyze.py  analyze_human_review.py  analyze_retrieval.py  audit_bioasq_graph_coverage.py  audit_data.py  build_graph_degrees.py  build_graph_index.py  build_index.py  build_indexes.py  build_medcpt_index.py  calibrate_generators.py  check_llm_readiness.py  data_pipeline.py  download_data.py  eda.py  evaluate_answer_run.py  evaluate_bm25.py  evaluate_evidence_extraction.py  evaluate_medcpt.py  evaluate_primekgqa.py  evaluate_query_expansion.py  evaluate_text_pipelines.py  export_human_review.py  freeze_eval_population.py  freeze_graph_annotation_sample.py  freeze_human_sample.py  make_subset.py  primekgqa_gate.py  render_eda_summary.py  run.py  run_bioasq_end_to_end.py  run_demo.py  run_experiment.py  runtime_manifest.py  (+4 more)
(+434 files in other folders)
