[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medgraphrag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rank-bm25==0.2.2", "PyYAML==6.0.2", "numpy>=1.26", "google-genai>=0.3"]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
