[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "medrag-lab"
version = "0.1.0"
description = "Controlled closed-corpus biomedical RAG experiments on BioASQ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139",
  "httpx>=0.28",
  "mlflow>=3.5",
  "numpy>=2.1",
  "openai>=2.45",
  "pydantic>=2.13",
  "pydantic-settings>=2.14",
  "pyyaml>=6.0",
  "rank-bm25>=0.2.2",
  "scipy>=1.18",
  "tiktoken>=0.12",
  "uvicorn[standard]>=0.49",
]

[project.optional-dependencies]
dense = ["faiss-cpu>=1.14", "torch>=2.11", "transformers>=4.57"]
semantic = ["bert-score>=0.3.13", "rouge-score>=0.1.2"]
dev = ["mypy>=1.19", "pytest>=8.3", "pytest-asyncio>=1.4", "ruff>=0.14"]

[project.scripts]
medrag = "medrag_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["medrag_lab", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["apps/web", "artifacts", "data", "results"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
